fix: remove --lib flag from cargo test (binary crate, no lib target)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
         run: cargo clippy -p a3s -- -D warnings
 
       - name: Tests
-        run: cargo test -p a3s --lib
+        run: cargo test -p a3s
